# web3-auth-py

./: README.md  pyproject.toml
tests/: conftest.py  test_authenticate.py  test_generate_sign_data.py  test_signature.py  test_token.py  utils.py
web3auth/: __init__.py  auth.py  main.py  token.py  types.py  utils.py
